# dequelparti

./: 404.html  README.md  index.html  index.txt  vscode.code-workspace
.github/: README.md
404/: index.html
dataeng/: .gitignore  README.md  docker-compose.yml  draft.md  draft.py  main.py  main_draft.py  pyproject.toml  report_dynamo_export.sarif
dataeng/data/src/modules/nlp_classifier_svc/_get_and_train_model/cache/checkpoints/: epoch=0-step=459-v1.ckpt  epoch=0-step=459-v2.ckpt  epoch=0-step=459-v3.ckpt  epoch=0-step=459.ckpt  epoch=1-step=918.ckpt  epoch=58-step=27081.ckpt  epoch=61-step=28458.ckpt  epoch=64-step=29835.ckpt  epoch=67-step=31212.ckpt  epoch=69-step=32130.ckpt  epoch=79-step=36720.ckpt
dataeng/draft/all_MiniLM_L6_v2/model_prod/: config.json
dataeng/src/confs/: all_minilm_l6_v2_conf.py  envs_conf.py  ollama_conf.py  spacy_conf.py
dataeng/src/modules/_old/nlp/: lemma_embeddings_vo.py  nlp_svc.py  slinding_avg_lemmas_vo.py  vocabulary_vo.py
dataeng/src/modules/_old/programs_extractor/: programs_extractor_svc.py
dataeng/src/modules/ensemble/services/: ensemble_svc.py
dataeng/src/modules/file_system/: file_system_svc.py
dataeng/src/modules/file_system/pdf_vo/: pdf_page_vo.py  pdf_vo.py
dataeng/src/modules/llm_prep/: cache_svc.py  llm_prep_rows_vo.py  llm_prep_svc.py  llm_row_vo.py  llm_rows_vo.py
dataeng/src/modules/llm_prep/llm_rows_vo/: llm_rows_vo.py
dataeng/src/modules/nlp/: nlp_svc.py
dataeng/src/modules/nlp_classifier/: classifier_data_mod.py  classifier_mod.py  nlp_classifier_svc.py
dataeng/src/modules/nlp_classifier/prepare_data_svc/: cache_svc.py  prepare_data_svc.py
dataeng/src/modules/nouveau_front_populaire/services/: nouveau_front_populaire_svc.py
dataeng/src/modules/pdf/: pdf_rep.py
dataeng/src/modules/programs_extractor/: programs_extractor_svc.py
dataeng/src/modules/rassemblement_national/services/: rassemblement_national_svc.py
dataeng/src/modules/shared/atomic_vos/atoms/: decoded_embedding_vo.py  id_vo.py  label_vo.py  pdf_page_vo.py  vector_embedding_vo.py
dataeng/src/modules/shared/atomic_vos/molecules/: embedding_row_vo.py  pdf_vo.py
dataeng/src/modules/shared/atomic_vos/organisms/: embedding_table_vo.py
dataeng/src/modules/shared/services/: nlp_svc.py  pdf_svc.py  write_json_svc.py
dataeng/src/modules/vector_database/: vector_database_rep.py  vector_database_svc.py
dataeng/src/modules/vocabulary_prep/: vocabulary_prep_svc.py  vocabulary_vo.py
docs/: docs.excalidraw
frontend/: .gitignore  README.md  components.json  draft.js  main.py  next.config.mjs  package-lock.json  (+1 more)
(+123 files in other folders)
