[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pypdf2 = "^3.0.1"
spacy = "^3.7.5"
pyspellchecker = "^0.8.1"
fr-core-news-lg = {url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.7.0/fr_core_news_lg-3.7.0-py3-none-any.whl"}
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
ollama = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
