[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pypdf2 = "^3.0.1"
tqdm = "^4.66.4"
torch = { version = "^2.4.0+cu124", source = "pytorch-cu124" }
torchaudio = { version = "^2.4.0+cu124", source = "pytorch-cu124" }
torchvision = { version = "^0.19.0+cu124", source = "pytorch-cu124" }
onnx = "^1.16.2"
onnxscript = "^0.1.0.dev20240809"
onnxruntime-gpu = { version = "^1.18.1", source = "onnxruntime-cuda-12" }
transformers = "^4.44.0"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "onnxruntime-cuda-12"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
